# qr-gen

./: .env.example  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  pr.yml  release.yml
app/: __init__.py  main.py
app/core/: __init__.py  config.py
tests/: conftest.py  test_main.py
